@@ -20,12 +20,14 @@
  */
 
 #include "yelp-man-parser.h"
+#include "yelp-utils.h"
 
 gint 
 main (gint argc, gchar **argv) 
 {
-    YelpManParser *parser;
-    xmlDocPtr      doc;
+    YelpManParser     *parser;
+    YelpDocumentInfo  *doc_info;
+    xmlDocPtr          doc;
 
     if (argc < 2) {
 	g_error ("Usage: test-man-parser file\n");
@@ -33,13 +35,16 @@ main (gint argc, gchar **argv)
     }
 
     parser = yelp_man_parser_new ();
-
-    doc = yelp_man_parser_parse_file (parser, argv[1]);
+    doc_info = yelp_document_info_get (argv[1]);
+    if (!doc_info) {
+	printf ("Failed to load URI: %s\n", argv[1]);
+	return -1;
+    }
+    doc = yelp_man_parser_parse_document (parser, doc_info);
 
     yelp_man_parser_free (parser);
 
     xmlDocDump (stdout, doc);
-
     xmlFreeDoc (doc);
 
     return 0;
