@@ -26,11 +26,15 @@
 #include <glib.h>
 #include <libxml/tree.h>
 
+#include "yelp-utils.h"
+
 typedef struct _YelpManParser YelpManParser;
 
-YelpManParser *     yelp_man_parser_new          (void);
-xmlDocPtr           yelp_man_parser_parse_file   (YelpManParser   *parser,
-						  gchar           *file);
-void                yelp_man_parser_free         (YelpManParser   *parser);
+YelpManParser *     yelp_man_parser_new            (void);
+xmlDocPtr           yelp_man_parser_parse_file     (YelpManParser    *parser,
+						    gchar            *file);
+xmlDocPtr           yelp_man_parser_parse_document (YelpManParser    *parser,
+						    YelpDocumentInfo *doc);
+void                yelp_man_parser_free           (YelpManParser    *parser);
 
 #endif /* __YELP_MAN_PARSER_H__ */
